# fastapi-aws

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  app.py  book_api_stack.py  docker-compose.yml  ecrImages.sh  main.py  makefile  pyproject.toml  run_tests.sh
.github/workflows/: build.yml  deploy.yml
app/config/: __init__.py
app/graphql/: __init__.py
app/models/: hello_response_models.py
app/resolvers/hello/: resolve_hello.py
clients/db/: __init__.py
src/clients/db/: __init__.py
src/config/: __init__.py
src/graphql_api/: __init__.py
src/jobs/: book_ratings_job.py
src/middlewares/: authorization.py
src/models/: hello_response_models.py
src/models/authors/: author_models.py
src/models/books/: book_models.py
src/models/common/: response_models.py
src/models/db/: db_models.py
src/models/reviews/: review_models.py
src/resolvers/books/: resolve_books.py
src/resolvers/hello/: resolve_hello.py
src/resolvers/reviews/: resolve_reviews.py
src/services/books/: book_service.py
src/services/reviews/: review_service.py
tests/: test_main.py
tests/services/books/: test_book_service.py
tests/test_utils/: mock_db_fixtures.py  test_data.py
