[tool.poetry]
name = "fastapi-starter"
version = "0.1.0"
description = ""
authors = ["Miguel Angel Zetina Zetina <miguel.zetina@storicard.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
fastapi-utils = "^0.2.1"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
pydantic = {extras= ["dotenv"], version = "^1.10.2"}
dataclasses-json = "^0.5.7"
gpl = "^0.1.4"
strawberry-graphql = {extras = ["debug-server"], version = "^0.151.2"}
motor = "^3.1.1"
aws-cdk-core = "^1.186.1"
aws-cdk-assertions = "^1.186.1"
aws-cdk-aws-apigateway = "^1.186.1"
aws-cdk-aws-ecr = "^1.186.1"
aws-cdk-aws-ecs = "^1.186.1"
aws-cdk-aws-ec2 = "^1.186.1"
aws-cdk-aws-ecs-patterns = "^1.186.1"
pymongo = { version = "^4.3.3", extras = ["srv"] }

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
coverage = "^7.0.2"
httpx = "^0.23.2"
pylint = "^2.15.9"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
